# stock_scraper_backend

./: .coverage  .env  .gitattributes  .gitignore  .yamllint.yml  Dockerfile  README.md  Taskfile.yaml  alembic.ini  cleanup_docker.sh  docker-compose.yml  prestart.sh  pyproject.toml  requirements.txt  update_readme_tree.sh  upload.txt
.github/workflows/: README.md  build_and_release.yaml  build_workflow.yaml  ci.yaml  ci_cd_pipeline.yaml  ci_cd_pipelines.yaml  docker-publish.yml  docker_build_and_push.yaml  main.yaml  review_and_preparation.yaml  terraform.yaml  terraform.yml  trivy.yaml  trivy.yml  workflow.yml
ZALOHA/: OK-credentials-docker_build_and_push.yaml  OK-docker_build_and_push.yaml  aws_setup.yaml  build_and_release.yaml  build_workflow.yaml  cluster-config.yaml  db-deployment.yaml  db-secret.yaml  db-service.yaml  docker-publish.yml  docker_build_and_push.yaml  env.py  main.yaml  postgres-pvc.yaml  postman-config.yaml  postman-cronjob.yaml  postman-deployment.yaml  poznamky.txt  prestart.sh  prune_docker.sh  release_workflow.yaml  requirements.txt  swagger-service.yaml
ZALOHA/workflows/: ci.yaml  docker_build_and_push.yaml  trivy.yml
alembic/: env.py
cloudformation/: combined.yaml  ec2_instance.yaml  s3_bucket.yaml
kubernetes/: Dockerfile  eks-cluster-config.yaml  kubernetes-resources.yaml  swagger-deployment.yaml
src/: initialize_db.py  main.py  models.py  scraper.py
terraform/: backend-config.tfvars  backend.tf  main.tf  outputs.tf  plan.out  tfplan  variables.tf
tests/: db_healthcheck.py  test_database.py  test_scraper.py
(+3 files in other folders)
